# un-docs-downloader

./: .gitignore  .vercelignore  AGENTS.md  README.md  VERCEL.md  pyproject.toml  vercel.json
.github/workflows/: backfill-sessions.yml  build-site.yml  daily-sync.yml  debug.yml  deploy.yml  detect.yml  discover.yml  discover.yml.disabled  email-signals.yml  extract.yml  fetch-documents.yml  generate.yml  generate.yml.disabled  heartbeat.yml  igov-signals.yml  igov-sync.yml  link.yml  link.yml.disabled  linkage-analysis.yml  pages.yml  pipeline.yml
config/: checks.yaml  patterns.yaml
data/: last_discover_run.json  lineage.json  state.json
data/detected/: A_80_L.1.json  A_80_L.10.json  A_80_L.11.json  A_80_L.12.json  A_80_L.13.json  A_80_L.14.json  A_80_L.15.json  A_80_L.16.json  A_80_L.17.json  A_80_L.18.json  A_80_L.19.json  A_80_L.2.json  A_80_L.20.json  A_80_L.21.json  A_80_L.22.json  A_80_L.23.json  A_80_L.24.json  A_80_L.25.json  A_80_L.26.json  A_80_L.27.json  A_80_L.28.json  A_80_L.29.json  A_80_L.3.json  A_80_L.30.json  A_80_L.31.json  A_80_L.32.json  A_80_L.33.json  A_80_L.34.json  A_80_L.35.json  A_80_L.36.json  A_80_L.37.json  (+2856 more)
docs/: base_proposal_symbol_samples.md  build-metrics.json  data.json  index.html  origin_matrix.html  search-index.json  signals-info.html  signals-unified.html  signals.html  test-redeploy.txt
scripts/: analyze-workflow-metrics.sh  vercel_build.py
tests/: test_downloader.py  test_extractor.py  test_generation.py  test_lineage.py  test_linking.py  test_linking_rate_limit.py  test_pipeline_e2e.py  test_vercel_build.py
(+6876 files in other folders)
