[project]
name = "mandate-pipeline"
version = "0.1.0"
description = "Download and analyze UN Official Document System files for mandate tracking"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pymupdf>=1.23.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.scripts]
mandate = "mandate_pipeline.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
